--- a/client/package.json
+++ b/client/package.json
@@ -3,16 +3,20 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@testing-library/jest-dom": "^5.11.9",
-    "@testing-library/react": "^11.2.5",
-    "@testing-library/user-event": "^12.7.0",
+    "@material-ui/core": "^4.11.3",
+    "axios": "^0.21.1",
     "bootstrap": "^4.5.2",
+    "cors": "^2.8.5",
     "firebase": "^7.20.0",
     "react": "^17.0.1",
     "react-bootstrap": "^1.3.0",
     "react-dom": "^17.0.1",
+    "react-file-base64": "^1.0.3",
+    "react-redux": "^7.2.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.2",
+    "redux": "^4.0.5",
+    "redux-thunk": "^2.3.0",
     "web-vitals": "^1.1.0"
   },
   "scripts": {
