--- a/client/package.json
+++ b/client/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "@material-ui/core": "^4.11.3",
+    "@material-ui/icons": "^4.9.1",
     "axios": "^0.21.1",
     "bootstrap": "^4.5.2",
     "cors": "^2.8.5",
@@ -17,6 +18,7 @@
     "react-scripts": "4.0.2",
     "redux": "^4.0.5",
     "redux-thunk": "^2.3.0",
+    "moment": "^2.27.0",
     "web-vitals": "^1.1.0"
   },
   "scripts": {
