--- a/server/package.json
+++ b/server/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "mern-stack-api",
+  "name": "memory-games",
   "version": "1.0.0",
   "description": "",
   "main": "app.js",
@@ -10,10 +10,15 @@
   },
   "author": "",
   "license": "ISC",
+  "devDependencies": {
+    "concurrently": "^4.1.0",
+    "nodemon": "^1.18.7"
+  },
   "dependencies": {
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
     "express": "^4.17.1",
-    "mongoose": "^5.9.29"
+    "mongoose": "^5.9.29",
+    "concurrently": "^4.1.0"
   }
 }
