--- a/client/package.json
+++ b/client/package.json
@@ -3,11 +3,13 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@auth0/auth0-react": "^1.3.0",
     "@material-ui/core": "^4.11.3",
     "@material-ui/icons": "^4.9.1",
     "axios": "^0.21.1",
     "bootstrap": "^4.5.2",
     "cors": "^2.8.5",
+    "moment": "^2.27.0",
     "react": "^17.0.1",
     "react-bootstrap": "^1.3.0",
     "react-dom": "^17.0.1",
@@ -17,7 +19,6 @@
     "react-scripts": "4.0.2",
     "redux": "^4.0.5",
     "redux-thunk": "^2.3.0",
-    "moment": "^2.27.0",
     "web-vitals": "^1.1.0"
   },
   "scripts": {
