--- a/server/package.json
+++ b/server/package.json
@@ -5,7 +5,7 @@
   "main": "app.js",
   "type": "module",
   "scripts": {
-    "start": "nodemon index.js",
+    "start": "node app.js",
     "watch": "nodemon"
   },
   "author": "",
