--- a/client/package.json
+++ b/client/package.json
@@ -6,6 +6,11 @@
     "@auth0/auth0-react": "^1.3.0",
     "@material-ui/core": "^4.11.3",
     "@material-ui/icons": "^4.9.1",
+    "@fortawesome/fontawesome-svg-core": "^1.2.26",
+    "@fortawesome/free-brands-svg-icons": "^5.12.0",
+    "@fortawesome/free-regular-svg-icons": "^5.12.0",
+    "@fortawesome/free-solid-svg-icons": "^5.12.0",
+    "@fortawesome/react-fontawesome": "^0.1.8",
     "axios": "^0.21.1",
     "bootstrap": "^4.5.2",
     "cors": "^2.8.5",
@@ -20,7 +25,8 @@
     "reactstrap": "^8.9.0",
     "redux": "^4.0.5",
     "redux-thunk": "^2.3.0",
-    "web-vitals": "^1.1.0"
+    "web-vitals": "^1.1.0",
+    "react-tilt": "^0.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
