--- a/client/package.json
+++ b/client/package.json
@@ -4,13 +4,13 @@
   "private": true,
   "dependencies": {
     "@auth0/auth0-react": "^1.3.0",
-    "@material-ui/core": "^4.11.3",
-    "@material-ui/icons": "^4.9.1",
     "@fortawesome/fontawesome-svg-core": "^1.2.26",
     "@fortawesome/free-brands-svg-icons": "^5.12.0",
     "@fortawesome/free-regular-svg-icons": "^5.12.0",
     "@fortawesome/free-solid-svg-icons": "^5.12.0",
     "@fortawesome/react-fontawesome": "^0.1.8",
+    "@material-ui/core": "^4.11.3",
+    "@material-ui/icons": "^4.9.1",
     "axios": "^0.21.1",
     "bootstrap": "^4.5.2",
     "cors": "^2.8.5",
@@ -22,11 +22,12 @@
     "react-redux": "^7.2.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.2",
+    "react-tilt": "^0.1.4",
     "reactstrap": "^8.9.0",
     "redux": "^4.0.5",
     "redux-thunk": "^2.3.0",
-    "web-vitals": "^1.1.0",
-    "react-tilt": "^0.1.4"
+    "styled-components": "^5.2.1",
+    "web-vitals": "^1.1.0"
   },
   "scripts": {
     "start": "react-scripts start",
