--- a/client/package.json
+++ b/client/package.json
@@ -1,6 +1,7 @@
 {
   "name": "client",
   "version": "0.1.0",
+  "proxy" : "http://localhost:5000",
   "private": true,
   "dependencies": {
     "@auth0/auth0-react": "^1.3.0",
